php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #40704 strip_tags does not handle single quotes correctly (another regression)
Submitted: 2007-03-03 10:19 UTC Modified: 2007-03-03 15:46 UTC
From: email at steffenweber dot net Assigned:
Status: Closed Package: Strings related
PHP Version: 5.2.1 OS: Linux
Private report: No CVE-ID: None
 [2007-03-03 10:19 UTC] email at steffenweber dot net
Description:
------------
I think the fix for bug #40637 did not completely fix the regression caused by the fix for bug #40432. I'm using PHP 5.2.1 and the following patches from branch:
- Bug #40432 http://cvs.php.net/viewvc.cgi/php-src/ext/standard/string.c?r1=1.445.2.14.2.39&r2=1.445.2.14.2.40&view=patch
- Bug #40637 http://cvs.php.net/viewvc.cgi/php-src/ext/standard/string.c?r1=1.445.2.14.2.42&r2=1.445.2.14.2.43&view=patch

Reproduce code:
---------------
<?php
$html = "<div>Bug ' Trigger</div> Missing Text";
var_dump(strip_tags($html));
?>


Expected result:
----------------
Prints "Bug ' Trigger Missing Text".

Actual result:
--------------
Prints "Bug ' Trigger".

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-03-03 15:46 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 22 06:00:02 2026 UTC