Fixed bug #40704 (strip_tags() does not handle single quotes correctly)